<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="action_stop">Stop</string>
    <string name="app_name">Clipbrd Beta</string>
    <string name="background_channel_name">Clipboard Monitor</string>
    <string name="cancel">Cancel</string>
    <string name="change_password">Change password</string>
    <string name="changing_password_">Changing password...</string>
    <string name="choose_your_new_password">Choose your new password:</string>
    <string name="clipboard_monitor_notification_text">Monitoring clipboard changes...</string>
    <string name="clipboard_monitor_notification_title">Clipboard Monitor</string>
    <string name="close">Close</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="completing_signup_">Completing signup…</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="default_web_client_id">1085584794536-0pafs452kur11kpe5ig7ohio6pu40n0o.apps.googleusercontent.com</string>
    <string name="description">"Synchronize clipboard between all your devices!
You also have to install the Clipbrd app for Google Chrome in order for the clipboard sync to work.
This is an early beta version, expect some rough edges ;)"</string>
    <string name="dialog_unsupported_device">"I'm sorry, but your device is not supported."</string>
    <string name="email">Email</string>
    <string name="email_">Email:</string>
    <string name="email_can_t_be_empty">"Email can't be empty"</string>
    <string name="enter_your_email_address_to_reset_your_password">Enter your email address to reset your password</string>
    <string name="error">Error</string>
    <string name="error_no_google_accounts">"Looks like you don't have any Google Accounts set up.
Please add a Google Account and try again."</string>
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="firebase_database_url">https://api-project-1085584794536.firebaseio.com</string>
    <string name="forgot_your_password_"><a href="#">Forgot your password?</a></string>
    <string name="ga_trackingId">UA-38628617-1</string>
    <string name="gcm_defaultSenderId">1085584794536</string>
    <string name="google_api_key">AIzaSyA0R-hbQqTEw3ndCuwf5qmRWJgyubdSxkI</string>
    <string name="google_app_id">1:1085584794536:android:42eadbb061864f44</string>
    <string name="google_crash_reporting_api_key">AIzaSyA0R-hbQqTEw3ndCuwf5qmRWJgyubdSxkI</string>
    <string name="google_storage_bucket">api-project-1085584794536.appspot.com</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="new_password">New password</string>
    <string name="new_password_cant_be_empty">"New password can't be empty"</string>
    <string name="no_account_exists_for_this_e_mail_address">No account exists for this e-mail address</string>
    <string name="old_password">Old password</string>
    <string name="old_password_cant_be_empty">"Old password can't be empty"</string>
    <string name="oops">Oops</string>
    <string name="password">Password</string>
    <string name="password_">Password:</string>
    <string name="password_can_t_be_empty">"Password can't be empty"</string>
    <string name="password_changed">Password changed</string>
    <string name="password_confirmation_cant_be_empty">"Password confirmation can't be empty"</string>
    <string name="password_confirmation_dont_match">"Password confirmation don't match"</string>
    <string name="please_check_your_email_for_password_reset_instructions">Please check your email for password reset instructions.</string>
    <string name="please_sign_in_to_clipbrd_with_your_new_password">Please sign in to Clipbrd with your new password</string>
    <string name="preparing_">Preparing…</string>
    <string name="project_id">api-project-1085584794536</string>
    <string name="received_clipboard_d_chars_">Received clipboard (%d chars)</string>
    <string name="requesting_password_reset_">Requesting password reset…</string>
    <string name="reset_password">Reset Password</string>
    <string name="select_an_account">Select an account</string>
    <string name="sent_clipboard_d_chars_">Sent clipboard (%d chars)</string>
    <string name="setting_new_password_">Setting new password…</string>
    <string name="settings">Settings</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_to_clipbrd">Sign in to Clipbrd</string>
    <string name="sign_in_with_existing_account">Sign in with existing account</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_up">Sign Up</string>
    <string name="signed_in_as_">Signed in as:</string>
    <string name="signing_in_">Signing in…</string>
    <string name="signing_out_">Signing out…</string>
    <string name="signing_up_">Signing up…</string>
    <string name="silent">Silent</string>
    <string name="something_is_wrong_with_password_recovery_params">Something is wrong with password recovery params</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="submit">Submit</string>
    <string name="sync_is_off">Sync is OFF</string>
    <string name="sync_is_on">Sync is ON</string>
    <string name="title_activity_change_password">Change Password</string>
    <string name="title_activity_forgot_hash">Forgot Password</string>
    <string name="title_activity_hash_reset">Reset Password</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_sign_in">Sign In</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_activity_signin">Sign In</string>
    <string name="title_activity_splash">Welcome to Clipbrd</string>
    <string name="undefined">undefined</string>
</resources>
