<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:padding="10.0sp" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:id="@id/labelChooseNewPassword" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/choose_your_new_password" />
    <EditText android:layout_gravity="center" android:id="@id/reset_password" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/new_password" android:inputType="textPassword" />
    <EditText android:layout_gravity="center" android:id="@id/reset_password_confirmation" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/confirm_password" android:inputType="textPassword" />
    <LinearLayout android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@id/btn_reset_hash" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/reset_password" />
        <Button android:id="@id/btn_cancel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cancel" />
    </LinearLayout>
</LinearLayout>