<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:padding="10.0sp" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:id="@id/labelForgotPassword" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/enter_your_email_address_to_reset_your_password" />
    <EditText android:layout_gravity="center" android:id="@id/email" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/email" android:inputType="textEmailAddress" />
    <LinearLayout android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@id/btn_submit" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/submit" />
        <Button android:id="@id/btn_cancel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cancel" />
    </LinearLayout>
</LinearLayout>